--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,12 +28,12 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/ProyectoCamioncitos.jar
+dist.jar=${dist.dir}/ProyectoCamioncitosEstaSiEs.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/ProyectoCamioncitos
+dist.jlink.output=${dist.jlink.dir}/ProyectoCamioncitosEstaSiEs
 excludes=
-file.reference.mssql-jdbc-12.2.0.jre8.jar=src\\resources\\mssql-jdbc-12.2.0.jre8.jar
+file.reference.mssql-jdbc-12.2.0.jre8.jar=src/resources/mssql-jdbc-12.2.0.jre8.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -73,12 +73,12 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=ProyectoCamioncitos
+jlink.launcher.name=ProyectoCamioncitosEstaSiEs
 main.class=main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_17
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
